2020-08-28 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c:
	  Implement RFE#656: add barrel shifts and jp (c) instruction support.

2020-08-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-1.c:
	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	* support/regression/tests/gcc-torture-execute-20040409-3.c:
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c:
	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c:
	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_global_yx.c:
	  Disabled for clang-6.0 and below.

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/crt0_rle.s: crt0_rle.s renamed to __initrleblock.s
	* src/z80/gen.c,
	  src/z80/peep.c,
	  device/lib/gbz80/__initrleblock.s:
	  Prepare to implement RFE#670 and RFE#707. Not enabled in z80/main.c,
	  because there are failed tests:
	    gcc-torture-execute-921013-1
	    gcc-torture-execute-pr83383

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCval.c:
	  Fix possible bug in reorderIlist() when empty array is passed.

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  New peephole rules, fixed and reenabled rule 44.

2020-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3102.c:
	  Disable some peephole rules for bug #3102.

2020-08-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Improve back compatibility with elder gcc/g++.

2020-08-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Fix unmatched right parentheses.

2020-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3101.

2020-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implement RFE #404.
